--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
       </div>
       <div class="right">
         <ul>
-          <li>• HTML, CSS, JavaScript Expert</li>
+           <li>• Html,CSS,JavaScript,Java,C++</li>
           <li>• Responsive Design Specialist</li>
           <li>• Creative UI/UX Approach</li>
           <li>• Friendly & Communicative</li>
+        
         </ul>
       </div>
     </section>
@@ -59,6 +60,30 @@
       </div>
     </section>
  <br> <br>
+     <!-- My Services Section -->
+    <!-- My Services Section -->
+<section class="services" id="services">
+  <h2>My Services</h2>
+  <div class="services-list">
+    <div class="service-card">
+      <h3>📄 Static Website</h3>
+      <p>Simple and fast-loading websites perfect for portfolios, blogs, and business profiles.</p>
+      <button> <a href="https://cyberghost19-code.github.io/page/"  class="service-btn"> Click here </a></button>
+    </div>
+    <div class="service-card">
+      <h3>⚡ Responsive Website</h3>
+      <p>Websites that adapt perfectly to all screen sizes — mobile, tablet, and desktop.</p>
+      <button> <a href="https://lnkd.in/eZi_n3qx"  class="service-btn"> Click here </a></button>
+    </div>
+    <div class="service-card">
+      <h3>📄 Form Validation App</h3>
+      <p>Online stores with secure payment integration and easy product management.</p>
+      <button> <a href="https://cyberghost19-code.github.io/formvaildation/"  class="service-btn"> Click here </a></button>
+    </div>
+  </div>
+</section>
+
+
     <!-- Contact Section -->
     <section class="contact">
       <h2>Reach Out to Me</h2>
