--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <div class="service-card">
       <h3>⚡ Responsive Website</h3>
       <p>Websites that adapt perfectly to all screen sizes — mobile, tablet, and desktop.</p>
-      <button> <a href="https://lnkd.in/eZi_n3qx"  class="service-btn"> Click here </a></button>
+      <button> <a href="https://github.com/ShabnamDoongrani/ResponsiveWEBSITE/actions/runs/17862306192/job/50796006189"  class="service-btn"> Click here </a></button>
     </div>
     <div class="service-card">
       <h3>📄 Form Validation App</h3>
       <p>Online stores with secure payment integration and easy product management.</p>
-      <button> <a href="https://cyberghost19-code.github.io/formvaildation/"  class="service-btn"> Click here </a></button>
+      <button> <a href="https://shabnamdoongrani.github.io/formvaildation/"  class="service-btn"> Click here </a></button>
     </div>
   </div>
 </section>
