--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="service-card">
       <h3>📄 Static Website</h3>
       <p>Simple and fast-loading websites perfect for portfolios, blogs, and business profiles.</p>
-      <button> <a href="https://cyberghost19-code.github.io/page/"  class="service-btn"> Click here </a></button>
+      <button> <a href="https://github.com/ShabnamDoongrani/Responsive/actions/runs/17862306578/job/50796004160"  class="service-btn"> Click here </a></button>
     </div>
     <div class="service-card">
       <h3>⚡ Responsive Website</h3>
